commented curriculum delete and edit opts

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_list.html
@@ -12,10 +12,12 @@
         			<a href="{% url 'curriculum_detail' group_id node.pk %}" class="hyperlink-info"> Created on: {{node.created_at}}</a>
     			</div>
     		</div>
-            <div class="curriculum_content_right" style="margin-top: 52px;">
+
+<!--             <div class="curriculum_content_right" style="margin-top: 52px;">
             <a data-reveal-id="delete-unit"><i class="fa fa-trash"></i>{% trans "Delete" %}</a>
             <a href="#"><i class="fa fa-pencil"></i>{% trans "Edit" %}</a>
             </div>
+ -->
     	</div>
     </div>
 
