--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -482,13 +482,14 @@ Still keeping for future ref (if needed).
 
             {% endif %}
           {% endif %}
-            {% if "QuizItemEvent" in node.member_of_names_list %}
-                {% if request.user.is_authenticated %}
-                  {% include 'ndf/quiz_player.html' %}
-                {% else %}
-                  <label>Please <a href="{% url 'auth_login' %}?next={{request.path}}">LOGIN</a>  to view the Quiz</label>
-                {% endif %}
+
+          {% if request.user.is_authenticated %}
+            {% if "QuizItemEvent" in node.member_of_names_list or "QuizItem" in node.member_of_names_list%}
+              {% include 'ndf/quiz_player.html' %}
+            {% else %}
+              <label>Please <a href="{% url 'auth_login' %}?next={{request.path}}">LOGIN</a>  to view the Quiz</label>
             {% endif %}
+          {% endif %}
 
           {% block add_fields %} {% endblock %}
 
