display topic map only if its a group/workspace

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -119,9 +119,11 @@
       {% endif %}
       </a>
     </li>
+    {% if 'Group'  in group_object.member_of_names_list %}
     <li>
       <a href="{% url 'curriculum_list' groupid  %}"> {% trans "Topic Map" %}</a>
     </li>
+    {% endif %}
   </ul>
 </div>
 
