display quiz-player in cms

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -478,8 +478,17 @@ This will not be used because now only existing activities will be added.
                     alert('Unable to load data... Something went wrong :(')
                     return false
                 }
-                data_dict = JSON.parse(data);
-                $('#activity-content').html(data_dict.content);
+                display_data = "<p>Unable to process your request at this moment. Please try after some time</p>"
+                try {
+                    data_dict = JSON.parse(data);
+                    display_data = data_dict.content
+                }
+                catch(err) {
+                    display_data = data
+                }
+                finally {
+                    $('#activity-content').html(display_data);
+                }
                 MathJax.Hub.Queue(["Typeset",MathJax.Hub,'activity-content']);
                 $("#info-page-area").html("");
 
