--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -248,31 +248,54 @@
 
 
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_en" >{% trans "Insert StarLogo Nova Model1 (en)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_en" >{% trans "Insert StarLogoNOVA_Anemia1(en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_en" >{% trans "Insert StarLogo Nova Model2 (en)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_en" >{% trans "Insert StarLogoNOVA_Anemia2(en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_hi" >{% trans "Insert StarLogo Nova Model1 (hi)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_hi" >{% trans "Insert StarLogoNOVA_Anemia1(hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_hi" >{% trans "Insert StarLogo Nova Model2 (hi)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_hi" >{% trans "Insert StarLogoNOVA_Anemia2(hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_te" >{% trans "Insert StarLogo Nova Model1 (te)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_te" >{% trans "Insert StarLogoNOVA_Anemia1(te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_te" >{% trans "Insert StarLogo Nova Model2 (te)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_te" >{% trans "Insert StarLogoNOVA_Anemia2(te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_en" >{% trans "Insert StarLogo Nova Model3 (en)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_en" >{% trans "StarLogoNOVA_FishAlgae(en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_hi" >{% trans "Insert StarLogo Nova Model3 (hi)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_hi" >{% trans "Insert StarLogoNOVA_FishAlgae(hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_te" >{% trans "Insert StarLogo Nova Model3 (te)" %} </button>
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model3_te" >{% trans "Insert StarLogoNOVA_FishAlgae(te)" %} </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_Build_An_Atom_en" >{% trans "Insert Build_An_Atom(en)" %} </button>
+                </div>
+
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_Build_An_Atom_hi" >{% trans "Insert Build_An_Atom(hi)" %} </button>
+                </div>
+
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_Build_An_Atom_te" >{% trans "Insert Build_An_Atom(te)" %} </button>
+                </div>
+
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_Build_A_Molecule_en" >{% trans "Insert Build_An_Molecule(en)" %} </button>
+                </div>
+
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_Build_A_Molecule_hi" >{% trans "Insert Build_An_Molecule(hi)" %} </button>
+                </div>
+
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_Build_A_Molecule_te" >{% trans "Insert Build_An_Molecule(te)" %} </button>
                 </div>
 
 
