--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -133,8 +133,16 @@
 
               </div>
               <div class="activity_page_rendered buddy_margin">
+                {% if "QuizItemEvent" in node.member_of_names_list or "QuizItem" in node.member_of_names_list%}
+                  {% if request.user.is_authenticated %}
+                      {% load_quiz_player request group_id node %}
+                  {% else %}
+                    <label>Please <a href="{% url 'auth_login' %}?next={{request.path}}">LOGIN</a>  to view the Quiz</label>
+                  {% endif %}
+                {% else %}
                 {# {{node.content|safe}} #}
                 {% include "ndf/node_ajax_content.html" with node=trans_node expand_content=True  no_discussion=True hide_breadcrumbs=True %}
+                {% endif %}
               </div>
               <div class="discussion-area activity_page_rendered" style="">
                 
