--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/quiz_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/quiz_player.html
@@ -2,8 +2,10 @@
 {% load re_format from simple_filters %}
 {% load i18n %}
 {% get_group_name groupid as group_name_tag %}
+{% if request.user.is_authenticated %}
 {% get_user_quiz_resp node request.user as total_and_curr_ans_dict %}
 {% check_is_gstaff groupid request.user as is_gstaff %}
+
 <div class="row quiz-player">
 	<label class="attempts_count right fi-info"></label>
 	<fieldset>
@@ -296,3 +298,6 @@
 		}
 
 </script>
+{% else %}
+  <label>Please <a href="{% url 'auth_login' %}?next={{request.path}}">LOGIN</a>  to view the Quiz</label>
+{% endif %}
