--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -5,33 +5,27 @@
 {% block title %} {{title|capfirst}} {% endblock title %}
 
 {% block body_content %}
-{% get_group_object as group_object %}
-{% check_is_gstaff group_id request.user as is_gstaff %}
-		{% include 'ndf/explore_secondary_header.html' %}
-		
-		<!--section role="tabpanel" aria-hidden="true" class="content active " style="border-style:none;"-->
-		{% if title == "workspaces" %}
-	        		
-			
-	        {% if user.is_authenticated %}
-	        <a class="right text_button wrkspace" href="{% url 'create_group' group_object.pk %}" title="Create New Workspace"><i class="fa fa-plus"> New Workspace </i></a>
-			{% endif %}
-	        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
-			{% for each_obj in groups_cur %}
-		        <li class="card-image-wrapper">
-					{% include card with node=each_obj has_logo=True no_footer=True url_name="course_about" first_arg=each_obj.pk %}
-				</li>
-			{% endfor %}
-			</ul>
-		{% else %}
-			{% if title == "drafts" and  is_gstaff  %}
-		        <a href="{% url 'unit_create_edit' group_id %}" class="right text_button wrkspace"><i class="fa fa-plus"> New Unit</i></a>
-                <a href="{% url 'module_create' group_id %}" class="right text_button"><i class="fa fa-plus"> New Module</i></a>
-			{% endif %}
-			{% include "ndf/lms_explore.html"  %}
-		{% endif %}
+	{% get_group_object as group_object %}
+	{% check_is_gstaff group_id request.user as is_gstaff %}
+	{% include 'ndf/explore_secondary_header.html' %}
 
-
-
-
+	<!--section role="tabpanel" aria-hidden="true" class="content active " style="border-style:none;"-->
+	{% if title == "workspaces" %}
+	{% if user.is_authenticated %}
+	<a class="right text_button wrkspace" href="{% url 'create_group' group_object.pk %}" title="Create New Workspace"><i class="fa fa-plus"> New Workspace </i></a>
+	{% endif %}
+	<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+		{% for each_obj in groups_cur %}
+		<li class="card-image-wrapper">
+			{% include card with node=each_obj has_logo=True no_footer=True url_name="course_about" first_arg=each_obj.pk %}
+		</li>
+		{% endfor %}
+	</ul>
+	{% else %}
+	{% if is_gstaff  %}
+	<a href="{% url 'unit_create_edit' group_id %}" class="right text_button wrkspace"><i class="fa fa-plus"> New Unit</i></a>
+	<a href="{% url 'module_create' group_id %}" class="right text_button"><i class="fa fa-plus"> New Module</i></a>
+	{% endif %}
+	{% include "ndf/lms_explore.html"  %}
+	{% endif %}
 {% endblock body_content %}
