module sort-order maintain. UI updated of Explore. Code optimized at few places.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5716,3 +5716,27 @@ ul.nav_menu_1 {
   font-size: small;
   height: 2rem;
   }
+
+.explore-settings-drop{
+    margin-left: 57%;
+    display: inline-block;
+    &> button {
+    color: #164a7b;
+    font-weight: 400;
+    padding: 14px 10px 3px 10px;
+    cursor: pointer;
+    margin-top: 4px;
+    background-color: #ddeff9;
+    border-radius: 10px;
+    border: 2px solid #719dc8;
+    display: inline-block;
+        &:hover{
+            border-radius: 10px;
+            background-color: #ddeff9;
+            color: #164a7b;
+        }
+    }
+    a{
+        font-size:16px;
+    }
+}
