--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5559,3 +5559,31 @@ p {
   font-size: small;
   height: 2rem;
 }
+
+/* line 5720, ../../../scss/_clix2017.scss */
+.explore-settings-drop {
+  margin-left: 57%;
+  display: inline-block;
+}
+/* line 5723, ../../../scss/_clix2017.scss */
+.explore-settings-drop > button {
+  color: #164a7b;
+  font-weight: 400;
+  padding: 14px 10px 3px 10px;
+  cursor: pointer;
+  margin-top: 4px;
+  background-color: #ddeff9;
+  border-radius: 10px;
+  border: 2px solid #719dc8;
+  display: inline-block;
+}
+/* line 5733, ../../../scss/_clix2017.scss */
+.explore-settings-drop > button:hover {
+  border-radius: 10px;
+  background-color: #ddeff9;
+  color: #164a7b;
+}
+/* line 5739, ../../../scss/_clix2017.scss */
+.explore-settings-drop a {
+  font-size: 16px;
+}
