--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
@@ -1,8 +1,15 @@
 {% load i18n %}
-{% load check_is_gstaff user_groups get_gstudio_workspace_instance from ndf_tags %}
+{% load ndf_tags %}
+{% load check_is_gstaff user_groups get_gstudio_workspace_instance cast_to_node get_attribute_value get_node_by_member_of_name from ndf_tags %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
 {% user_groups request.user.is_superuser request.user.id as user_grp_count %}
 {% get_gstudio_workspace_instance as is_workspace_instance %}
+{% if modules_is_cur %}
+	{% rewind_cursor modules_cur as modules_cur %}
+{% endif %}
+{% get_attribute_value group_id 'items_sort_list' as modules_sort_list %}
+{% cast_to_node modules_sort_list as modules_node_sort_list %}
+
 
 <nav class="top-bar-second" data-topbar role="navigation" id="top-bar-second">
 		<div class="small-12 medium-12 columns expore-type">
@@ -23,6 +30,62 @@
 				{% endif %}
 				
 
+				{% if is_gstaff  %}
+	            <div class="explore-settings-drop">
+	                <button href="#" data-dropdown="explore-settings" aria-controls="explore-settings" aria-expanded="false" data-options="is_hover:true;align:bottom">{% trans " Options " %}<i class="fa fa-chevron-down"></i></button><br/>
+	                <ul id="explore-settings" data-dropdown-content class="f-dropdown" aria-hidden="true">
+					<li>
+						<a href="{% url 'unit_create_edit' group_id %}"> New Unit</i></a>
+					</li>
+					<li>
+						<a href="{% url 'module_create' group_id %}" > New Module</i></a>
+					</li>
+					<li>
+						<a data-reveal-id="sort-module-reveal"> Sort Modules</i></a>
+						<div id="sort-module-reveal" class="reveal-modal large" data-reveal > 
+							<div class="content">
+							<h4>{% trans "Module Display Ordering: " %}</h4>
+							<div>
+								{% include "ndf/widget_selector.html" with for='module_list' all_options=modules_cur selected_options=modules_node_sort_list oneline_element='true' %}
+							</div><br/>
+							<input type="button" id="save_module_order_list" class="right orange-button" value="{% trans 'SAVE' %}">
+							</div>
+							<a class="close-reveal-modal">&#215;</a>
+						</div>          
+
+					</li>
+	                </ul>
+
+
+	            </div>    
+				{% endif %}
+				
 			</div>
 		</div>
 	</nav>
+<script type="text/javascript">
+	$(document).on('click', '#save_module_order_list', function(e){
+	    getSelValuesHiddenElement('module_list', 'sort-module-reveal')
+		module_list_ids = $("input[name=module_list]").val()
+        $.ajax({
+          type: "POST",
+
+          url: "{% url 'module_order_list' %}",
+          datatype: "html",
+          data:{
+            'csrfmiddlewaretoken': "{{csrf_token}}",
+            'module_list': module_list_ids
+	        },
+            success: function(data) {
+            	data = JSON.parse(data)
+            	if (!data['success']){
+            		alert("Something went wrrong. Please try again later.")
+            	}
+            	$('#sort-module-reveal').foundation('reveal', 'close');
+            	location.reload()
+            }
+        });
+
+	})
+
+</script>
