--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -11,7 +11,13 @@
 
 <div class="notebook">
     <div class="row notebook-header collapse">
-        {% get_course_filters group_id title as filter_dict %}
+          {% if "CourseEventGroup" in node.member_of_names_list %}
+            {% get_course_filters group_id title as filter_dict %}
+            <input type="hidden"  class="title-for-filters" value="notebook">
+          {% else %}
+          <input type="hidden"  class="title-for-filters" value="notebook_lms">
+            {% get_course_filters group_id "notebook_lms" as filter_dict %}
+          {% endif %}
         {% include "ndf/filters.html" with filter_dict=filter_dict %}
     </div>
     {% comment %}
@@ -423,12 +429,13 @@
 
     function applyFilter(filtersObjArr){
         filtersObjArr = JSON.stringify(getFiltersObjsInAndOrFormat());
+        title = $(".title-for-filters").val();
         $.ajax({
           url: "{% url 'course_filters' group_id %}",
           data: {
             filter_dict: filtersObjArr,
             'filter_applied': 'True',
-            'title': '{{title}}'
+            'title': title
           },
           type: "GET",
           dataType: "html",
