--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_card_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_card_list.html
@@ -6,7 +6,7 @@
 
 {% for each in files_cur %}
     
-    {% include 'ndf/asset_card.html' with url_name="asset_detail" first_arg=group_id second_arg=each.pk each_asset=each %}    
+    {% include 'ndf/asset_card.html' with url_name=detail_urlname first_arg=group_id second_arg=each.pk each_asset=each %}    
 
 {% endfor %}
 
