--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
@@ -32,14 +32,19 @@
 			<div class="explore-settings-drop">
 				<button href="#" data-dropdown="explore-settings" aria-controls="explore-settings" aria-expanded="false" data-options="is_hover:true;align:bottom">{% trans " Options " %}<i class="fa fa-chevron-down"></i></button><br/>
 				<ul id="explore-settings" data-dropdown-content class="f-dropdown" aria-hidden="true">
+					{% if title == "workspaces" %}
 					<li>
-						<a href="{% url 'unit_create_edit' group_id %}"> New Unit</i></a>
+						<a class="wrkspace" href="{% url 'create_group' group_object.pk %}" title="Create New Workspace">New Workspace </a>
+					</li>
+					{% else %}
+					<li>
+						<a href="{% url 'unit_create_edit' group_id %}"> New Unit</a>
 					</li>
 					<li>
-						<a href="{% url 'module_create' group_id %}" > New Module</i></a>
+						<a href="{% url 'module_create' group_id %}" > New Module</a>
 					</li>
 					<li>
-						<a data-reveal-id="sort-module-reveal"> Sort Modules</i></a>
+						<a data-reveal-id="sort-module-reveal"> Sort Modules</a>
 						<div id="sort-module-reveal" class="reveal-modal large" data-reveal > 
 							<div class="content">
 								<h4>{% trans "Module Display Ordering: " %}</h4>
@@ -52,6 +57,7 @@
 						</div>          
 
 					</li>
+					{% endif %}
 				</ul>
 
 
