--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5573,8 +5573,8 @@ p {
   cursor: pointer;
   margin-top: 4px;
   background-color: #ddeff9;
-  border-radius: 10px;
-  border: 2px solid #719dc8;
+  border: 1px solid #719dc8;
+  border-radius: 5px !important;
   display: inline-block;
 }
 /* line 5733, ../../../scss/_clix2017.scss */
