--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -61,7 +61,7 @@
     {% include 'ndf/asset_card.html' with url_name="asset_detail" first_arg=group_id second_arg=each_asset.pk each=each_asset %}    
   {% endfor %}
 </div>
-
+{% comment %}
 {% if title == "gallery" %}
 {% include 'ndf/pagination.html' with urlname="course_gallery_paged" first_arg=group_id page_info=assets_page_info %}
 {% elif title == "raw material" %}
@@ -69,6 +69,7 @@
 {% elif title == "asset_list"  %}
 {% include 'ndf/pagination.html' with urlname="course_assets_paged" first_arg=group_id page_info=assets_page_info %}
 {% endif %}
+{% endcomment %}
 <script type="text/javascript">
    $( ".createAsset" ).click(function() {
                    var asset_id = $(this).attr('data-asset_id');
