--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5716,3 +5716,17 @@ ul.nav_menu_1 {
   font-size: small;
   height: 2rem;
   }
+
+.finish-lesson{
+    border-radius: 5px;
+    text-transform: uppercase;
+    color: #ffffff !important;
+    width: inherit;
+    font-family: "OpenSans-Semibold", sans-serif;
+    border: 2px solid #6a0054;
+    background-color: #6a0054;    
+}
+
+.auto_width{
+    width: auto !important;
+}
