--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -39,25 +39,24 @@
                 {% if help_oid %}
                 <li class=""><a {% if title == 'Help Page'  %} class="active" {% endif %} target="_blank" href="{% url 'course_content' help_oid %}"> <i class="fa fa-info-circle"></i> Help </a></li>
                 {% endif %}
-                <ul class="">
-          <li class="has-dropdown">
-            <a>{% trans "Language" %} &nbsp; | &nbsp; {{request.LANGUAGE_CODE}}</a>
-            <ul class="dropdown">
-
-              {% for lang in LANGUAGES %}
-                <li>
-                  <form action="/i18n/setlang/" method="POST">
-                    {% csrf_token %}
-                    <input name="url" type="hidden" value="{{request.get_full_path}}"/>
-                    <input type="hidden"  name="language" value="{{ lang.0 }}">
-                    <input type="submit" class="button expand secondary" value="{{ lang.1 }}"/>
-                  </form>
+                <li class="has-dropdown not-click">
+                    <a href="#">
+                    {% trans "Language" %}&nbsp; | &nbsp; {{request.LANGUAGE_CODE}}
+                    </a>
+                    <ul class="dropdown">
+                        {% for lang in LANGUAGES %}
+                            <li>
+                                <form action="/i18n/setlang/" method="POST">
+                                {% csrf_token %}
+                                <input name="url" type="hidden" value="{{request.get_full_path}}"/>
+                                <input type="hidden"  name="language" value="{{ lang.0 }}">
+                                <input type="submit" class="button expand secondary" value="{{ lang.1 }}"/>
+                                </form>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 </li>
-              {% endfor %}
-
-            </ul>
-          </li>
-        </ul>
+          
             {% if user.is_authenticated %}
                 <li class="has-dropdown buddy_margin white-text">
                     {% get_profile_pic request.user.pk as prof_pic %}
@@ -163,6 +162,13 @@
                 <li class=""><a href="{% url 'my_desk' request.user.id %}" {% if title == "my desk" %} class="active" {% endif %}>My Desk</a></li>
                 {% endif %}
                 <li><a href="{% url explore_url %}" {% if title == 'base courses' or title == "courses" or title == "drafts" %} class="active" {% endif %} > Explore</a>
+                </li>
+                <li class="has-dropdown not-click">
+                    <a href="#">Interactives</a>
+                    <ul class="dropdown">
+                        <li><a href="#">Games</a></li>
+                        <li><a href="http://doer.metastudio.org/welcome">DOER</a></li>
+                    </ul>
                 </li>
                 
             </ul>
